# ff-redux

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
data/2023_adv_stats/: Accuracy_by_team.csv  AirYards_by_team.csv  PlayType_by_team.csv  Pressure_by_team.csv  RB_by_player.csv  WR_by_player.csv
data/2024_adv_stats/: Accuracy_by_team.csv  AirYards_by_team.csv  PlayType_by_team.csv  Pressure_by_team.csv  RB_by_player.csv  WR_by_player.csv
data/2024_weekly_proj/: K.csv  QB.csv  RB.csv  TE.csv  WR.csv  off.csv
data/2025_weekly_proj/: DEF.csv  K.csv  QB.csv  RB.csv  TE.csv  WR.csv  off.csv
src/ffa/: __init__.py
src/ffa/adjust/: __init__.py
src/ffa/api/: __init__.py
src/ffa/calibrate/: __init__.py
src/ffa/cli/: __init__.py  __main__.py  main.py
src/ffa/config/: __init__.py  league.py  loader.py
src/ffa/config/template/: league.yaml
src/ffa/ids/: __init__.py  player.py
src/ffa/ingest/: __init__.py  projections.py  schemas.py
src/ffa/reports/: __init__.py
src/ffa/schemas/: __init__.py  player.py
src/ffa/scoring/: __init__.py  core.py  engine.py
src/ffa/sim/: __init__.py
src/ffa/utils/: __init__.py
src/ffa/value/: __init__.py  core.py
tests/: conftest.py  test_placeholder.py
tests/cli/: test_cli.py  test_cli_score.py
tests/config/: test_league_config.py  test_loader.py
tests/ids/: test_player.py
tests/ingest/: test_projections.py  test_schemas.py
tests/ingest/data/: projections.csv  projections.json
tests/schemas/: test_player_schema.py
tests/scoring/: test_engine.py
