[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ffa"
version = "0.1.0"
description = "Fantasy football auction value model"
authors = [{name="FFA Contributors"}]
requires-python = ">=3.10"
dependencies = ["typer"]

[project.scripts]
ffa = "ffa.cli.main:app"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E","F","I","B"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
